syntax = "proto3";

package nfa.intent.v1alpha;

option go_package = "github.com/neuro-fluidic-architecture/nfa-core/go/protos/intent/v1alpha";
option rust_package = "nfa::intent::v1alpha";

service Translator {
    rpc TranslateText(TranslateRequest) returns (TranslateResponse);
}

message TranslateRequest {
    string text = 1;
    string source_language = 2;
    string target_language = 3;
}

message TranslateResponse {
    string translated_text = 1;
    string source_language = 2;
    string target_language = 3;
}